# OOP_arcade_2018

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  arcade.cbp
core/: Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  EngineExceptions.hpp  Loader.cpp  Makefile  Menu.cpp  Menu.hpp  core.cpp  core.hpp  loader.cpp  main.cpp
core/elements/: AElement.cpp  AElement.hpp  UIRect.hpp  UIText.hpp
doc/: ~$carcade.docx
games/: IGameApi.hpp  Makefile  test.cpp
games/Nibbler/: Makefile  nibbler.cpp  nibbler.hpp
games/menu/: Menu.cpp  Menu.hpp  makefile
games/nibbler/: Makefile  Nibbler.cpp  Nibbler.hpp  nibbler.cpp  nibbler.hpp
games/solarfox/: Makefile  SolarFox.cpp  SolarFox.hpp
games/test/: Makefile  test.cpp
include/: IGraphAPI.hpp  SFMLGraphAPI.hpp
lib/: AElement.hpp  Events.hpp  Frame.hpp  IApi.hpp  IElement.hpp  SFMLApi.hpp  UIExceptions.hpp  UIRect.hpp  UIText.hpp  lib_arcade_qt.dylib
lib/Qt/: CMakeLists.txt  Makefile  QtApi.cpp  QtApi.hpp  QtApiWindow.cpp  lib_arcade_qt.dylib
lib/SFML/: Makefile  SFMLApi.cpp  SFMLApi.hpp  SFMLGraphAPI.cpp  main.cpp
lib/ncurses/: Makefile  NcursesApi.cpp  NcursesApi.hpp
